ui. Crit editors descriptions
--HG--
branch : f/Criterion

--- a/Diagnosis.Client.App/Controls/CriteriaParts/CriterionEditor.xaml
+++ b/Diagnosis.Client.App/Controls/CriteriaParts/CriterionEditor.xaml
@@ -52,11 +52,11 @@
         <TextBox Grid.Column="1"
                  Grid.Row="3"
                  AcceptsReturn="True"
+                 TextWrapping="Wrap"
                  Text="{Binding Criterion.Description,
                                 UpdateSourceTrigger=PropertyChanged,
                                 ValidatesOnDataErrors=True}"
-                 ScrollViewer.VerticalScrollBarVisibility="Auto"
-                 ScrollViewer.HorizontalScrollBarVisibility="Disabled" />
+                 ScrollViewer.VerticalScrollBarVisibility="Auto" />
 
         <search:QueryEditor DataContext="{Binding QueryEditor}"
                             Grid.Column="3"
