--- a/Diagnosis.Client.App/Screens/Criteria.xaml
+++ b/Diagnosis.Client.App/Screens/Criteria.xaml
@@ -39,9 +39,7 @@
             <ColumnDefinition Width="3*" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="auto" />
             <RowDefinition Height="*" />
-            <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
 
         <TreeView ItemsSource="{Binding TopItems}"
@@ -65,7 +63,7 @@
             </TreeView.ItemContainerStyle>
             <TreeView.ItemTemplate>
                 <HierarchicalDataTemplate ItemsSource="{Binding Children}">
-                    <TextBlock Text="{Binding Crit.Description}" />
+                    <TextBlock Text="{Binding Crit, StringFormat={}{0}}" />
                 </HierarchicalDataTemplate>
             </TreeView.ItemTemplate>
             <TreeView.ContextMenu>
