--- a/Diagnosis.Client.App/Controls/CriteriaParts/CriteriaGroupEditor.xaml
+++ b/Diagnosis.Client.App/Controls/CriteriaParts/CriteriaGroupEditor.xaml
@@ -34,11 +34,11 @@
         <TextBox Grid.Column="1"
                  Grid.Row="2"
                  AcceptsReturn="True"
+                 TextWrapping="Wrap"
                  Text="{Binding CriteriaGroup.Description,
                                 UpdateSourceTrigger=PropertyChanged,
                                 ValidatesOnDataErrors=True}"
-                 ScrollViewer.VerticalScrollBarVisibility="Auto"
-                 ScrollViewer.HorizontalScrollBarVisibility="Disabled" />
+                 ScrollViewer.VerticalScrollBarVisibility="Auto" />
 
         <StackPanel Grid.Row="3"
                     Style="{StaticResource DialogButtonsPanel}"
